[package]
name = "msq"
version = "0.2.1"
license = "ISC"
authors = ["nullsystem"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/nullsystem/msq-rs"
documentation = "https://docs.rs/msq"
description = "Rust library implementation of the legacy Master Server Query Protocol"
keywords = ["steam", "query"]
categories = ["asynchronous", "network-programming"]

[dependencies]
tokio = { version = "1", features = ["net", "rt", "macros", "rt-multi-thread"], optional = true }
byteorder = "1"

[features]
default = ["async", "non-async"]
async = ["tokio"]
non-async = []

